Add Display method to control dom

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="content"></div>
+  </body>
 </html>
 <script type="module" src="./app.js"></script>
